# bmw-e87-e90-can-bt

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32doit-devkit-v1
include/: ble_keyboard_utils.h  can_utils.h  config.h  log_utils.h
src/: CMakeLists.txt  ble_keyboard_utils.cpp  can_utils.cpp  main.c  main.cpp
